--- a/templates/game.xml
+++ b/templates/game.xml
@@ -24,18 +24,18 @@
                         <br/>
                         <button class="js-standbutton">STAND</button>
                         <br/>
-                        <button class="js-bet">BET 5</button>
+                        <!--<button class="js-bet">BET 5</button>-->
                     </div>
                 </div>
                 <div class="mainplayer__chipsplace">
                     main player chips
-                    <div class="chip red">
+                    <div class="chip red js-bet">
                         <span>5</span>
                     </div>
-                    <div class="chip yellow">
+                    <div class="chip yellow js-bet">
                         <span>50</span>
                     </div>
-                    <div class="chip blue">
+                    <div class="chip blue js-bet">
                         <span>100</span>
                     </div>
                 </div>
