--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -6,7 +6,11 @@ html, body {
   height: 100%; }
 
 body {
-  background-color: #f0f0f0;
+  background-color: #466d19;
+  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 560, from(#65981e), to(#184d08));
+  background-image: -webkit-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08);
+  background-image: -moz-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08);
+  background-image: -ms-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08);
   font-family: Helvetica, serif;
   overflow: hidden; }
 
@@ -85,7 +89,11 @@ body {
   height: 100%;
   padding-bottom: 100px;
   box-sizing: border-box;
-  background-color: #2E8B57; }
+  background-color: #466d19;
+  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 560, from(#65981e), to(#184d08));
+  background-image: -webkit-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08);
+  background-image: -moz-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08);
+  background-image: -ms-radial-gradient(center center, ellipse farthest-corner, #65981e, #184d08); }
 
 .playerboard {
   position: absolute;
@@ -106,11 +114,19 @@ body {
 
 .freespace, .leftplayer__freespace, .rightplayer__freespace {
   height: 16.66666666%;
-  border: 1px black solid; }
+  border: 9px solid #809d29;
+  border-color: rgba(208, 209, 78, 0.3);
+  padding: 2%;
+  -ms-border-radius: 30px;
+  border-radius: 30px; }
 
 .place, .leftplayer__cardsplace, .rightplayer__cardsplace, .dealer__cardsplace, .mainplayer__cardsplace, .leftplayer__chipsplace, .rightplayer__chipsplace, .mainplayer__chipsplace {
   height: 33.33333333%;
-  border: 1px black solid; }
+  border: 9px solid #809d29;
+  border-color: rgba(208, 209, 78, 0.3);
+  padding: 2%;
+  -ms-border-radius: 30px;
+  border-radius: 30px; }
 
 .cards, .buttons {
   float: left;
