--- a/public_html/css/scss/main.scss
+++ b/public_html/css/scss/main.scss
@@ -9,7 +9,11 @@ html {
 
 body {
   @extend html;
-  background-color: #f0f0f0;
+  background-color: #466d19;
+  background-image: -webkit-gradient(radial,50% 50%,0,50% 50%,560,from(#65981e),to(#184d08));
+  background-image: -webkit-radial-gradient(center center,ellipse farthest-corner,#65981e,#184d08);
+  background-image: -moz-radial-gradient(center center,ellipse farthest-corner,#65981e,#184d08);
+  background-image: -ms-radial-gradient(center center,ellipse farthest-corner,#65981e,#184d08);
   font-family: Helvetica, serif;
   overflow: hidden;
 }
