--- a/public_html/css/scss/_game.scss
+++ b/public_html/css/scss/_game.scss
@@ -21,7 +21,7 @@
 .playerboard {
   position: absolute;
   bottom: 0;
-  background-color: #CD853F;
+  //background-color: #CD853F;
   height: 100px;
   width: 100%;
 }
@@ -104,4 +104,21 @@
 .buttons {
   float: left;
   width: 50%;
+}
+
+.actbutton {
+  border: 0px;
+  border-radius: 5px;
+  padding: 15px 25px;
+  font-size: 22px;
+  text-decoration: none;
+  margin-top: 10px;
+  color: #fff;
+  position: relative;
+  display: inline-block;
+  background-color: #f1c40f;
+  box-shadow: 0px 5px 0px 0px #D8AB00;
+  width: 120px;
+  font-family: Chewy, Georgia, serif;
+  text-align: center;
 }
