--- a/templates/game.xml
+++ b/templates/game.xml
@@ -3,7 +3,7 @@
         <div class="gametable">
             <div class="leftplayer">
                 <div class="leftplayer__freespace">
-                    <a href="/#">BACK</a>
+                    <a class="actbutton" href="/#">BACK</a>
                 </div>
                 <div class="leftplayer__cardsplace">
                     left cards
@@ -20,24 +20,15 @@
                 <div class="mainplayer__cardsplace">
                     <div class="cards js-cards"></div>
                     <div class="buttons js-buttons">
-                        <button class="js-hitbutton">HIT</button>
+                        <button class="actbutton js-hitbutton">HIT</button>
                         <br/>
-                        <button class="js-standbutton">STAND</button>
+                        <button class="actbutton js-standbutton">STAND</button>
                         <br/>
                         <!--<button class="js-bet">BET 5</button>-->
                     </div>
                 </div>
                 <div class="mainplayer__chipsplace">
                     main player chips
-                    <div class="chip red js-bet">
-                        <span>5</span>
-                    </div>
-                    <div class="chip yellow js-bet">
-                        <span>50</span>
-                    </div>
-                    <div class="chip blue js-bet">
-                        <span>100</span>
-                    </div>
                 </div>
             </div>
             <div class="rightplayer">
@@ -52,7 +43,15 @@
             </div>
         </div>
         <div class="playerboard">
-            player board
+            <div class="chip red js-bet">
+                <span>5</span>
+            </div>
+            <div class="chip yellow js-bet">
+                <span>50</span>
+            </div>
+            <div class="chip blue js-bet">
+                <span>100</span>
+            </div>
         </div>
     </div>
 </fest:template>
