--- a/public_html/css/scss/_card.scss
+++ b/public_html/css/scss/_card.scss
@@ -1,8 +1,17 @@
+.cardset {
+  margin-left: 50px;
+}
+
 .card {
-  height: 100px;
-  width: 70px;
-  background-color: red;
-  position: absolute;
-  top: -400px;
-  left: 0px;
+  //height: 100px;
+  //width: 70px;
+  //background-color: red;
+  //position: absolute;
+  //top: -400px;
+  //left: 0px;
+  margin-left: -50px;
+  float: left;
+  background:url('/img/card.gif') 0 0;
+  width: 81px;
+  height: 118px;
 }
