--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -3,7 +3,8 @@
   padding: 0; }
 
 html, body {
-  height: 100%; }
+  height: 100%;
+  min-height: 600px; }
 
 body {
   background-color: #466d19;
@@ -112,6 +113,10 @@ body {
   width: 100%;
   display: none; }
 
+.choosechip {
+  margin-left: auto;
+  margin-right: auto; }
+
 .secondaryplayer, .leftplayer, .rightplayer {
   height: 100%;
   width: 30%;
@@ -124,19 +129,29 @@ body {
 
 .freespace, .leftplayer__freespace, .rightplayer__freespace {
   height: 16.66666666%;
-  border: 9px solid #809d29;
   border-color: rgba(208, 209, 78, 0.3);
-  padding: 2%;
-  -ms-border-radius: 30px;
-  border-radius: 30px; }
+  padding: 2%; }
 
-.place, .leftplayer__cardsplace, .rightplayer__cardsplace, .dealer__cardsplace, .mainplayer__cardsplace, .leftplayer__chipsplace, .rightplayer__chipsplace, .mainplayer__chipsplace {
+.place, .leftplayer__cardsplace, .rightplayer__cardsplace {
   height: 33.33333333%;
-  border: 9px solid #809d29;
   border-color: rgba(208, 209, 78, 0.3);
-  padding: 2%;
-  -ms-border-radius: 30px;
-  border-radius: 30px; }
+  padding: 2%; }
+
+.dealer__cardsplace {
+  height: 230px; }
+
+.mainplayer__cardsplace {
+  height: 230px; }
+
+.leftplayer__chipsplace {
+  height: 20%; }
+
+.rightplayer__chipsplace {
+  height: 20%; }
+
+.mainplayer__chipsplace {
+  height: 100px;
+  padding-top: 10px; }
 
 .cards {
   float: left;
@@ -188,6 +203,13 @@ body {
   font-family: Chewy, Georgia, serif;
   font-size: 25pt;
   color: #FFDF00; }
+
+.lbl {
+  display: block;
+  clear: both;
+  font-size: 30pt;
+  font-family: Chewy, Georgia, serif;
+  color: #fff; }
 
 .cardset {
   margin-left: 50px;
