--- a/public_html/css/scss/_game.scss
+++ b/public_html/css/scss/_game.scss
@@ -27,6 +27,11 @@
   display: none;
 }
 
+.choosechip {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .secondaryplayer {
   height: 100%;
   width: 30%;
@@ -49,11 +54,8 @@
 
 .freespace {
   height: 16.66666666%;
-  border: 9px solid #809d29;
   border-color: rgba(208,209,78,0.3);
   padding: 2%;
-  -ms-border-radius: 30px;
-  border-radius: 30px;
 }
 
 .leftplayer__freespace {
@@ -66,11 +68,11 @@
 
 .place {
   height: 33.33333333%;
-  border: 9px solid #809d29;
+  //border: 9px solid #809d29;
   border-color: rgba(208,209,78,0.3);
   padding: 2%;
-  -ms-border-radius: 30px;
-  border-radius: 30px;
+  //-ms-border-radius: 30px;
+  //border-radius: 30px;
 }
 
 .leftplayer__cardsplace {
@@ -82,23 +84,24 @@
 }
 
 .dealer__cardsplace {
-  @extend .place;
+  height: 230px;
 }
 
 .mainplayer__cardsplace {
-  @extend .place;
+  height: 230px;
 }
 
 .leftplayer__chipsplace {
-  @extend .place;
+  height: 20%;
 }
 
 .rightplayer__chipsplace {
-  @extend .place;
+  height: 20%;
 }
 
 .mainplayer__chipsplace {
-  @extend .place;
+  height: 100px;
+  padding-top: 10px;
 }
 
 .cards {
@@ -155,4 +158,12 @@
   font-family: Chewy, Georgia, serif;
   font-size: 25pt;
   color: #FFDF00;
+}
+
+.lbl {
+  display: block;
+  clear: both;
+  font-size: 30pt;
+  font-family: Chewy, Georgia, serif;
+  color: #fff;
 }
