--- a/public_html/css/scss/main.scss
+++ b/public_html/css/scss/main.scss
@@ -16,7 +16,7 @@ body {
   background-image: -moz-radial-gradient(center center,ellipse farthest-corner,#65981e,#184d08);
   background-image: -ms-radial-gradient(center center,ellipse farthest-corner,#65981e,#184d08);
   font-family: Helvetica, serif;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 @import "menu";
