--- a/templates/game.xml
+++ b/templates/game.xml
@@ -25,6 +25,10 @@
                 </div>
                 <div class="mainplayer__cardsplace">
                     <span class="lbl">You</span>
+                    <div class="chipsValue">
+                        <img class="chipsImg" src="/img/value.png" />
+                        <span class="chipsVal">10345</span>
+                    </div>
                     <div class="cards js-cards">
                         <div class="cardset">
                         </div>
